--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "zustand-toolbox",
   "version": "0.0.5",
   "description": "Actions unpacker and selector generator for zustand",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/viktorelmer/zustand-toolbox"
+  },
   "keywords": [
     "zustand",
     "selectors",
